<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
      <artifactId>engine-parent</artifactId>
      <groupId>io.lumeer</groupId>
      <version>1.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>

   <artifactId>lumeer-core</artifactId>
   <name>Lumeer Core</name>

   <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <maven.compiler.source>10</maven.compiler.source>
      <maven.compiler.target>10</maven.compiler.target>
   </properties>

   <dependencies>
      <dependency>
         <groupId>io.lumeer</groupId>
         <artifactId>lumeer-storage-api</artifactId>
      </dependency>
      <dependency>
         <groupId>io.lumeer</groupId>
         <artifactId>lumeer-storage-mongodb</artifactId>
         <scope>runtime</scope>
      </dependency>

      <dependency>
         <groupId>javax.enterprise</groupId>
         <artifactId>cdi-api</artifactId>
         <scope>provided</scope>
      </dependency>
      <dependency>
         <groupId>javax.annotation</groupId>
         <artifactId>javax.annotation-api</artifactId>
         <scope>provided</scope>
      </dependency>
      <dependency>
         <groupId>com.fasterxml.jackson.module</groupId>
         <artifactId>jackson-module-jaxb-annotations</artifactId>
         <scope>provided</scope>
      </dependency>

      <dependency>
         <groupId>org.jboss.spec.javax.servlet</groupId>
         <artifactId>jboss-servlet-api_4.0_spec</artifactId>
         <scope>provided</scope>
      </dependency>
      <dependency>
         <groupId>org.jboss.spec.javax.enterprise.concurrent</groupId>
         <artifactId>jboss-concurrency-api_1.0_spec</artifactId>
      </dependency>

      <!-- Testing -->
      <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-core</artifactId>
         <scope>test</scope>
      </dependency>
      <!-- Byte buddy is needed to override default version imported by mockito to support Java 10, might be removed in the future -->
      <dependency>
         <groupId>net.bytebuddy</groupId>
         <artifactId>byte-buddy</artifactId>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>net.bytebuddy</groupId>
         <artifactId>byte-buddy-agent</artifactId>
         <scope>test</scope>
      </dependency>

      <dependency>
         <groupId>com.univocity</groupId>
         <artifactId>univocity-parsers</artifactId>
      </dependency>
      <dependency>
         <groupId>cz.gopay</groupId>
         <artifactId>gp-java-api-v3-common</artifactId>
         <version>3.4.4</version>
      </dependency>
      <dependency>
         <groupId>cz.gopay</groupId>
         <artifactId>gp-java-api-v3-resteasy</artifactId>
         <version>3.4.4</version>
         <exclusions>
            <exclusion>
               <groupId>org.jboss.resteasy</groupId>
               <artifactId>resteasy-jaxrs</artifactId>
            </exclusion>
            <exclusion>
               <groupId>org.jboss.resteasy</groupId>
               <artifactId>resteasy-client</artifactId>
            </exclusion>
            <exclusion>
               <groupId>org.jboss.resteasy</groupId>
               <artifactId>resteasy-jaxb-provider</artifactId>
            </exclusion>
            <exclusion>
               <groupId>org.jboss.resteasy</groupId>
               <artifactId>resteasy-jackson-provider</artifactId>
            </exclusion>
            <exclusion>
               <groupId>org.jboss.resteasy</groupId>
               <artifactId>resteasy-multipart-provider</artifactId>
            </exclusion>
         </exclusions>
      </dependency>

      <dependency>
         <groupId>com.auth0</groupId>
         <artifactId>mvc-auth-commons</artifactId>
      </dependency>
      <dependency>
         <groupId>com.auth0</groupId>
         <artifactId>java-jwt</artifactId>
      </dependency>
      <dependency>
         <groupId>com.googlecode.json-simple</groupId>
         <artifactId>json-simple</artifactId>
      </dependency>
      <dependency>
         <groupId>org.marvec</groupId>
         <artifactId>pusher</artifactId>
      </dependency>
      <dependency>
         <groupId>io.sentry</groupId>
         <artifactId>sentry</artifactId>
      </dependency>

      <dependency>
         <groupId>org.graalvm.sdk</groupId>
         <artifactId>graal-sdk</artifactId>
      </dependency>
      <dependency>
         <groupId>org.graalvm.sdk</groupId>
         <artifactId>polyglot-tck</artifactId>
      </dependency>
      <dependency>
         <groupId>org.graalvm.truffle</groupId>
         <artifactId>truffle-api</artifactId>
      </dependency>
      <dependency>
         <groupId>org.graalvm.js</groupId>
         <artifactId>js</artifactId>
      </dependency>

   </dependencies>

</project>
